Updates on multimedia

--- a/web/webroot/multimedia.html
+++ b/web/webroot/multimedia.html
@@ -1,81 +1,70 @@
-
-
-
-
 <h2> Multimedia </h2>
 <hr>
-<div class"row">
-	<div class="span5">
-		
-		<iframe src="https://www.youtube.com/embed/p-lJ0DWGWBI" height="385" width="480" allowfullscreen="" frameborder="0"></iframe>
-        <p class="multimedia_text"><strong>FIRMA CONVENIO</strong><br>Firma convenido de colaboración con el Centro Cultural Manuel Gómez Morín.<br>21 Mayo 2015.</p>
-	</div>
-	<div class="span5 offset1">
-		
-		<iframe src="https://www.youtube.com/embed/PBiITbvxv5k" height="385" width="480" allowfullscreen="" frameborder="0"></iframe>
-		<p class="multimedia_text"><strong>VIDEO INSTITUCIONAL</strong><br>Conoce el Centro Eugenio Garza Sada.<br></p>
-	</div>
-</div>
-
-
-<div class="row">
-	<div class="span12">
-		<hr>
-	</div>
-</div>
 
 <div class"row">
 	<div class="span5">
 		
-		<iframe src="https://www.youtube.com/embed/LHL7Pufengo" height="500" width="780" allowfullscreen="" frameborder="0"></iframe>
-        <p class="multimedia_text"><strong>CONFERENCIA EGS Y LA RESPONSABILIDAD SOCIAL EMPRESARIAL</strong><br>Conferencia impartida por el Historiador César Salinas.</p>
-	</div>
-	<div class="span5 offset1">
-		
-		<iframe src="https://www.youtube.com/embed/LNx7SkpkgCQ" height="500" width="780" allowfullscreen="" frameborder="0"></iframe>
-		<p class="multimedia_text"><strong>EUGENIO GARZA SADA EN LÍDERES</strong><br>Semblanza de Eugenio Garza Sada en el programa Líderes.</p>
-	</div>
-</div>
-
-<div class="row">
-	<div class="span12">
-		<hr>
-	</div>
-</div>
-
-<div class"row">
-	<div class="span5">
-		
-		<iframe src="https://www.youtube.com/embed/LNx7SkpkgCQ" height="500" width="780" allowfullscreen="" frameborder="0"></iframe>
-        <p class="multimedia_text"><strong>REPORTAJE TRABAJOS RESTAURACIÓN </strong><br>Reportaje sobre la restauración de la Casa de EGS.</p>
-	</div>
-	<div class="span5 offset1">
-		
-		<iframe src="https://www.youtube.com/embed/CM3j01rYRC0" height="500" width="780" allowfullscreen="" frameborder="0"></iframe>
-		<p class="multimedia_text"><strong>CRÓNICA DEL CENTRO EUGENIO GARZA SADA POR JOEL SAMPAYO</strong><br>Reportaje realizada por Joel Sampayo.</p>
-	</div>
-</div>
-
-<div class="row">
-	<div class="span12">
-		<hr>
-	</div>
-</div>
-
-<div class"row">
-	<div class="span5">
-		
-		<iframe src="https://www.youtube.com/embed/FjA5hRhnEtY" height="500" width="780" allowfullscreen="" frameborder="0"></iframe>
+		<iframe src="https://www.youtube.com/embed/b0JV5uTkp6E" height="385" width="480" allowfullscreen="" frameborder="0"></iframe>
         <p class="multimedia_text"><strong>MONTERREY AÑO 1951</strong><br>Donativo Señor Billy Bremer.</p>
 	</div>
 	<div class="span5 offset1">
 		
-		<iframe src="https://www.youtube.com/embed/Mqq6iJRC-Nk" height="500" width="780" allowfullscreen="" frameborder="0"></iframe>
-		<p class="multimedia_text"><strong>REVISTAS LA CASONA</strong><br>Reportaje realizada por Joel Sampayo.</p>
+		<iframe src="https://www.youtube.com/embed/p-lJ0DWGWBI" height="385" width="480" allowfullscreen="" frameborder="0"></iframe>
+		<p class="multimedia_text"><strong>FIRMA CONVENIO</strong><br>Firma convenido de colaboración con el Centro Cultural Manuel Gómez.<br></p>
 	</div>
 </div>
 
+<div class="row">
+	<div class="span12">
+		<hr>
+	</div>
+</div>
 
+<div class"row">
+	<div class="span5">
+		
+		<iframe src="https://www.youtube.com/embed/PBiITbvxv5k" height="500" width="780" allowfullscreen="" frameborder="0"></iframe>
+        <p class="multimedia_text"><strong>VIDEO INSTITUCIONAL</strong><br>Conoce el Centro Eugenio Garza Sada.</p>
+	</div>
+	<div class="span5 offset1">
+		
+		<iframe src="https://www.youtube.com/embed/LHL7Pufengo" height="500" width="780" allowfullscreen="" frameborder="0"></iframe>
+		<p class="multimedia_text"><strong>CONFERENCIA EGS Y LA RESPONSABILIDAD SOCIAL EMPRESARIAL</strong><br>Conferencia impartida por el Historiador César Salinas.</p>
+	</div>
+</div>
 
+<div class="row">
+	<div class="span12">
+		<hr>
+	</div>
+</div>
+
+<div class"row">
+	<div class="span5">
+		
+		<iframe src="https://www.youtube.com/embed/HryIZtOZ2wM" height="500" width="780" allowfullscreen="" frameborder="0"></iframe>
+        <p class="multimedia_text"><strong>CRÓNICA DEL CENTRO EUGENIO GARZA SADA POR JOEL SAMPAYO</strong><br>Reportaje realizada por Joel Sampayo.</p>
+	</div>
+	<div class="span5 offset1">
+		
+		<iframe src="https://www.youtube.com/embed/CM3j01rYRC0" height="500" width="780" allowfullscreen="" frameborder="0"></iframe>
+		<p class="multimedia_text"><strong>REPORTAJE TRABAJOS RESTAURACIÓN</strong><br>Reportaje sobre la restauración de la Casa de EGS.</p>
+	</div>
+</div>
+
+<div class="row">
+	<div class="span12">
+		<hr>
+	</div>
+</div>
+
+<div class"row">
+	<div class="span5">
+		
+		<iframe src="https://www.youtube.com/embed/LNx7SkpkgCQ" height="500" width="780" allowfullscreen="" frameborder="0"></iframe>
+        <p class="multimedia_text"><strong>EUGENIO GARZA SADA EN LÍDERES</strong><br>Semblanza de Eugenio Garza Sada en el programa Líderes.</p>
+	</div>
+	
+</div>
 
 </div>
